# efm32gg-blink

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x
.cargo/: config
.github/workflows/: blink.yml
src/: main.rs
