[package]
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]
name = "efm32gg-blink"
version = "0.1.2"
edition = "2021"

[dependencies]
cortex-m = { version = ">=0.7.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = ">=0.7"

[dependencies.efm32gg-pac]
version = "0.1.2"
features = ["rt", "efm32gg990", "critical-section"]
